[gd_scene load_steps=19 format=3 uid="uid://cj8a4de5kqfer"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_144pv"]
[ext_resource type="Texture2D" uid="uid://cv0tpvp2ghrx" path="res://asserts/game_object/player/player.png" id="1_rv3jt"]
[ext_resource type="PackedScene" uid="uid://tkptanvg28it" path="res://scenes/component/health_component.tscn" id="2_5u4ra"]
[ext_resource type="PackedScene" uid="uid://s00n7b7niic8" path="res://scenes/component/random_stream_player_2d_component.tscn" id="2_6iscp"]
[ext_resource type="PackedScene" uid="uid://b2jilhcdk5g5s" path="res://scenes/component/velocity_component.tscn" id="3_c24dn"]
[ext_resource type="AudioStream" uid="uid://bwckaagjgf07b" path="res://asserts/audio/impactMining_000.ogg" id="3_lrg01"]
[ext_resource type="PackedScene" uid="uid://53v723hy8gg" path="res://scenes/abliity/sword_ability_controller/sword_ability_controller.tscn" id="3_m3kds"]
[ext_resource type="AudioStream" uid="uid://koa4qepb6r2f" path="res://asserts/audio/impactMining_001.ogg" id="4_rm6ie"]
[ext_resource type="AudioStream" uid="uid://ujuwahfukcib" path="res://asserts/audio/impactMining_002.ogg" id="5_ul2lt"]
[ext_resource type="AudioStream" uid="uid://48f6g7326jiw" path="res://asserts/audio/impactMining_003.ogg" id="6_arevx"]
[ext_resource type="AudioStream" uid="uid://x6mgyve0p3eq" path="res://asserts/audio/impactMining_004.ogg" id="7_vnt8y"]

[sub_resource type="Animation" id="Animation_tr5gr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_rlxqw"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -12), Vector2(0, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(0.594603, 3.03142, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.1), Vector2(1.5, 0.7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tysof"]
_data = {
"RESET": SubResource("Animation_tr5gr"),
"walk": SubResource("Animation_rlxqw")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_psrxd"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_4mw41"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_71wca"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pu4fr"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_144pv")

[node name="RandomStreamPlayer2DComponent" parent="." instance=ExtResource("2_6iscp")]
streams = Array[AudioStream]([ExtResource("3_lrg01"), ExtResource("4_rm6ie"), ExtResource("5_ul2lt"), ExtResource("6_arevx"), ExtResource("7_vnt8y")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tysof")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_5u4ra")]

[node name="VelocityComponent" parent="." instance=ExtResource("3_c24dn")]
max_speed = 90
acceleration = 25.0

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("3_m3kds")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -18.0
pivot_offset = Vector2(16, 3)
theme_override_styles/fill = SubResource("StyleBoxFlat_psrxd")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_4mw41")
debug_color = Color(2.64719e-06, 0.637585, 0.39014, 0.42)

[node name="CollisionArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_71wca")
debug_color = Color(0.64922, 0.520256, 3.85046e-07, 0.42)

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -8)
texture = ExtResource("1_rv3jt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_pu4fr")
debug_color = Color(0.957187, 0, 0.533921, 0.42)
